objects/OSM_Existing_Subscription__c.object
<CustomObject>
    <description>Stores data of subscriptions that existed in QSOL application.</description>
    <fields>
        <fullName>AccountIDForBuyButton__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIDForBuyButton</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer_Code__c</fullName>
        <label>Account Customer Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Existing Subscriptions</relationshipLabel>
        <relationshipName>Existing_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Coupon_Code__c</fullName>
        <label>Dealer Coupon Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_for_Distributors_for_Backend__c</fullName>
        <label>Discount for Distributors for Backend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_Coupon_Code__c</fullName>
        <label>Distributor Coupon Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Coupon_Already_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Coupon Already Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_License_Type__c</fullName>
        <label>Product License Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Existing Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Customer_Code__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Discount_for_Distributors_for_Backend__c</columns>
        <columns>Product_License_Type__c</columns>
        <columns>Subscription_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Renewal_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Distributor_Coupon_Code__c</columns>
        <columns>Dealer_Coupon_Code__c</columns>
        <columns>Is_Coupon_Already_Used__c</columns>
        <columns>Registration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ES-{0000000000}</displayFormat>
        <label>Existing Subscriptions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>